Use the javafx-gradle-plugin to make it run